--- a/requirements.txt
+++ b/requirements.txt
@@ -48,3 +48,21 @@ seaborn==0.10.1
     # via -r requirements.in
 six==1.16.0
     # via python-dateutil
+# Below are for Kural
+motor==3.5.1
+pydantic==2.8.2
+jose==1.0.0
+passlib==1.7.4
+python-dotenv==1.0.1
+python-jose==3.3.0
+pydantic_settings==2.4.0
+bcrypt==4.2.0
+requests==2.32.3
+pycryptodome==3.20.0
+PyJWT==2.9.0
+boto3==1.35.12
+python-multipart==0.0.9
+sse-starlette==2.1.3
+starlette==0.38.4
+httpx==0.27.2
+redis==5.0.8
